--- a/public/404.html
+++ b/public/404.html
@@ -19,10 +19,9 @@
 
 <body>
   <!-- This file lives in public/404.html -->
-  <div class="error">
-    <img src="404.png">
+  <div class="error" style="background-image: image-url("404.png");">
+  </div>
     <h1>お探しのページは見つかりません。</h1>
     <p>不正なページ遷移です。<br>指定したページURLに入力間違いがないか、再度ご確認ください。</p>
-  </div>
 </body>
 </html>
