--- a/public/404.html
+++ b/public/404.html
@@ -59,7 +59,7 @@
   <div class="dialog">
     <div>
       <h1>お探しのページは見つかりません。</h1>
-      <p>不正なページ遷移です。<br>指定したページURLに入力間違いがないか、再度ご確認ください。</p>
+      <p>不正なページ遷移です。<br>指定したページURLに入力間違いがないか、<br>再度ご確認ください。</p>
     </div>
   </div>
 </body>
